fixed gap for mobile modal

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -389,4 +389,8 @@
             width: 93%;
         }
     }
+
+    .form {
+        gap: 0.75rem;
+    }
 }
